fixed header flicker for responsiveness

--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -87,6 +87,7 @@ nav {
 
   &.close {
     transition: 0.3s ease-out;
+    background-color: initial;
     right: -100%;
   }
 
